import { Prop, Schema, SchemaFactory } from '@nestjs/mongoose'
import { Document } from 'mongoose'

import { UserGenderType as GenderType } from '../Types/types'
import { ApiProperty } from '@nestjs/swagger'

export type UserDocument = User & Document

@Schema({
    timestamps: {
        createdAt: 'created_at',
        updatedAt: 'updated_at',
    },
    validateBeforeSave: true,
})
export class User {
    //web3token
    @Prop({ default: null })
    @ApiProperty()
    token: string

    //gender
    @Prop({
        enum: Object.values(GenderType).concat([null]),
        required: false,
        default: null,
        type: String,
        allowNull: true,
    })
    @ApiProperty()
    gender: GenderType

    //email
    @Prop({
        type: String,
        required: false,
        default: null,
        trim: true,
        lowercase: true,
    })
    @ApiProperty()
    email: string

    //number_of_follower
    @Prop({
        default: 0,
    })
    @ApiProperty()
    number_of_follower: number

    //birth_day
    @Prop({
        default: null,
    })
    @ApiProperty()
    birth_day: string

    //full_name
    @Prop({
        default: null,
    })
    @ApiProperty()
    full_name: string

    //nick_name
    @Prop()
    @ApiProperty()
    nick_name: string

    //address
    @Prop()
    @ApiProperty()
    address: string

    //avatar_url
    @Prop()
    @ApiProperty()
    avatar_url: string

    //should_show_tour_guild
    @Prop({
        default: true,
    })
    @ApiProperty()
    should_show_tour_guild: boolean

    //should_show_account_setup_flow
    @Prop({
        default: true,
    })
    @ApiProperty()
    should_show_account_setup_flow: boolean

    //interest
    @Prop({
        default: [],
    })
    @ApiProperty()
    roles: [string]

    //interest
    @Prop({
        default: [],
    })
    @ApiProperty()
    interests: [string]

    @Prop({
        default: null,
    })
    @ApiProperty()
    blocked_at?: string

    @Prop()
    @ApiProperty()
    deleted_at: string
}

export const UserSchema = SchemaFactory.createForClass(User)
